use real bibentrytypes manager